# Bean_WorkSpace

./: README.md  pyproject.toml  run_app.bat  run_app.ps1  run_tests.bat
assets/models/: Apollo Lunar Module_nodraco.glb  Deep Space 1_nodraco.glb  Juno (B)_nodraco.glb  Wrench_nodraco.glb
docs/: scenario_format.md
src/space_dynamics_workbench/: __init__.py
src/space_dynamics_workbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/space_dynamics_workbench/app/: main.py  mesh_generation.py  mesh_loading.py  scenario_controller.py  window.py
src/space_dynamics_workbench/app/rendering/: __init__.py  base.py  renderer3d.py
src/space_dynamics_workbench/app/widgets/: __init__.py  inspector.py  invariants_panel.py  scenario_dialog.py  scenario_panel.py  scenario_settings_dialog.py  scene_view.py  simulation_panel.py  spacecraft_builder.py  view_options.py
src/space_dynamics_workbench/core/: __init__.py  scenario_definition.py
src/space_dynamics_workbench/core/io/: __init__.py  scenario_io.py
src/space_dynamics_workbench/core/model/: __init__.py  entities.py
src/space_dynamics_workbench/core/physics/: __init__.py  com.py  frames.py
src/space_dynamics_workbench/core/scenarios/: __init__.py  base.py  com_sandbox.py  registry.py  rigid_body_sandbox.py  spacecraft_builder_blank.py
src/space_dynamics_workbench/io/: __init__.py  scene_format.py
tests/: test_com_invariants.py  test_frames.py  test_mesh_generation.py  test_rigid_body.py  test_scenario_roundtrip.py  test_scene_roundtrip.py
(+2 files in other folders)
