[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "space-dynamics-workbench"
version = "0.1.0"
description = "Physics-first workspace for spacecraft dynamics visualizations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "PySide6",
  "pyqtgraph",
]

[project.optional-dependencies]
dev = ["pytest"]
gl = ["PyOpenGL"]
mesh = ["trimesh"]

[project.scripts]
space-dynamics-workbench = "space_dynamics_workbench.app.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
